Software/.metadata/.plugins/org.eclipse.cdt.ui/Sensor Code.build.log
03:00:09 **** Build of configuration Debug for project Sensor Code ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F051x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:110:11: warning: implicit declaration of function 'adc_set_channel' [-Wimplicit-function-declaration]
  110 |           adc_set_channel(channel);
      |           ^~~~~~~~~~~~~~~
../Core/Src/main.c:111:52: warning: implicit declaration of function 'read_adc' [-Wimplicit-function-declaration]
  111 |                           adc_value_front_sensor = read_adc() ;
      |                                                    ^~~~~~~~
../Core/Src/main.c:189:13: error: invalid storage class for function 'MX_ADC_Init'
  189 | static void MX_ADC_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:251:13: error: invalid storage class for function 'MX_GPIO_Init'
  251 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:323:1: error: expected declaration or statement at end of input
  323 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:58:13: warning: 'MX_GPIO_Init' used but never defined
   58 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:59:13: warning: 'MX_ADC_Init' used but never defined
   59 | static void MX_ADC_Init(void);
      |             ^~~~~~~~~~~
../Core/Src/main.c:314:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  314 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:289:6: warning: 'adc_set_channel' defined but not used [-Wunused-function]
  289 | void adc_set_channel(uint8_t num) {
      |      ^~~~~~~~~~~~~~~
../Core/Src/main.c:276:10: warning: 'read_adc' defined but not used [-Wunused-function]
  276 | uint16_t read_adc()
      |          ^~~~~~~~
../Core/Src/main.c:251:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  251 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:189:13: warning: 'MX_ADC_Init' defined but not used [-Wunused-function]
  189 | static void MX_ADC_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:151:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  151 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

03:00:12 Build Failed. 4 errors, 10 warnings. (took 2s.747ms)

